[package]
name = "rsa-der"
version = "0.2.1"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "Crate to encode and decode public RSA keys using DER"
license = "MIT/Apache-2.0"
repository = "https://github.com/caelunshun/rsa-der"
readme = "README.md"
keywords = ["crypto", "cryptography", "rsa", "der"]
categories = ["cryptography"]

[dependencies]
simple_asn1 = "0.6"

[dev-dependencies]
openssl = "0.10"
rand = "0.6" # the `rsa` crate insists on using an old version of `rand`
rsa = "0.5"
num-bigint-dig = "0.4"
